better parsing of features, improved decision tree viz, fixed alignement of plots

--- a/src/styles/visualizations.css
+++ b/src/styles/visualizations.css
@@ -37,8 +37,8 @@
     margin: 0 auto;
     display: flex;
     flex-direction: column;
-    align-items: center; /* Center content inside */
-    justify-content: center;
+    align-items: start; /* Center content inside */
+    justify-content: start;
     text-align: center;
 }
 
